[tool.poetry]
name = "deepface"
version = "0.1.0"
description = ""
authors = ["moui0 <haoyuw82@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
pillow = "^10.4.0"
pandas = "^2.2.2"
keras = "^3.5.0"
tensorflow = "^2.17.0"
gdown = "^5.2.0"
mtcnn = "^0.1.1"
retina-face = "^0.0.17"
numpy = "^1.23.5"
tf-keras = "^2.17.0"
flask = "^3.0.3"
flask-cors = "^4.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
